--- a/snippets/icon-hamburger.liquid
+++ b/snippets/icon-hamburger.liquid
@@ -1,10 +1,4 @@
-<svg
-  xmlns="http://www.w3.org/2000/svg"
-  aria-hidden="true"
-  focusable="false"
-  class="icon icon-hamburger"
-  fill="none"
-  viewBox="0 0 18 16"
->
-  <path d="M1 .5a.5.5 0 100 1h15.71a.5.5 0 000-1H1zM.5 8a.5.5 0 01.5-.5h15.71a.5.5 0 010 1H1A.5.5 0 01.5 8zm0 7a.5.5 0 01.5-.5h15.71a.5.5 0 010 1H1a.5.5 0 01-.5-.5z" fill="currentColor">
+
+<svg   class="icon icon-hamburger" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+<path d="M3 12H21M3 6H21M9 18H21" stroke="#2D3830" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
 </svg>
