--- a/assets/application.css
+++ b/assets/application.css
@@ -898,3 +898,248 @@ video {
     padding-bottom: 3px;
   }
 }
+
+/* Hero */
+
+.hero h4,
+.hero p {
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 28px;
+  --tw-text-opacity: 1;
+  color: rgb(224 224 214 / var(--tw-text-opacity));
+}
+
+@media (min-width: 1024px) {
+  .hero h4,
+.hero p {
+    font-size: 28px;
+    line-height: 39.2px;
+  }
+}
+
+.hero h4,
+.hero p {
+  letter-spacing: 0px;
+}
+
+.hero h1 {
+  margin-bottom: 14px;
+  font-size: 4vw;
+  font-weight: 800;
+  text-transform: uppercase;
+  line-height: 5vw;
+  --tw-text-opacity: 1;
+  color: rgb(224 224 214 / var(--tw-text-opacity));
+}
+
+@media (min-width: 1280px) {
+  .hero h1 {
+    font-size: 5vw;
+  }
+}
+
+.arrow-btn {
+  font-size: 24px;
+  font-weight: 800;
+  text-transform: uppercase;
+  line-height: 24px;
+  --tw-text-opacity: 1;
+  color: rgb(224 224 214 / var(--tw-text-opacity));
+}
+
+@media (min-width: 1024px) {
+  .arrow-btn {
+    font-size: 32px;
+    line-height: 32px;
+  }
+}
+
+.arrow-btn {
+  letter-spacing: 0px;
+  font-family: var(--font-heading-family);
+}
+
+.arrow-btn::after {
+  margin-left: 8px;
+  vertical-align: middle;
+  content: url("data:image/svg+xml,%3Csvg width='36' height='36' viewBox='0 0 36 36' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M10.5 25.5L25.5 10.5M25.5 10.5H10.5M25.5 10.5V25.5' stroke='%23E0E0D6' stroke-width='4' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E%0A");
+}
+
+.hero .hero-slide {
+  display: flex;
+  height: 100%;
+  max-height: 910px;
+}
+
+.hero .hero-slide .left-section {
+  position: relative;
+  display: flex;
+  width: 36%;
+  flex-direction: column;
+  padding-left: 5%;
+  padding-right: 5%;
+  padding-top: 8%;
+  padding-bottom: 2.6%;
+}
+
+@media (min-width: 1024px) {
+  .hero .hero-slide .left-section {
+    padding-left: 7.2%;
+    padding-right: 7.2%;
+  }
+}
+
+.hero .hero-slide .left-section .shape-wrapper {
+  position: absolute;
+  right: 0px;
+  top: 0px;
+  max-width: 271px;
+}
+
+.hero .hero-slide .left-section .shape-wrapper img {
+  width: 100%;
+}
+
+.hero .hero-slide .right-section {
+  width: 64%;
+}
+
+.hero .hero-slide .content {
+  margin-bottom: 20px;
+}
+
+.hero .right-section {
+  position: relative;
+}
+
+.hero .right-section img {
+  height: 100%;
+  max-height: auto;
+  width: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.hero .arrow-btn {
+  margin-top: auto;
+}
+
+.hero {
+  position: relative;
+}
+
+.hero .slider-btns {
+  position: absolute;
+  top: 50%;
+  display: flex;
+  width: 100%;
+  --tw-translate-y: -50%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  justify-content: space-between;
+}
+
+.hero .slider-btns button {
+  display: flex;
+  height: 66px;
+  width: 66px;
+  align-items: center;
+  justify-content: center;
+  --tw-bg-opacity: 1;
+  background-color: rgb(45 56 48 / var(--tw-bg-opacity));
+}
+
+.hero .dots {
+  position: absolute;
+  bottom: 60px;
+  left: 47.5%;
+  display: flex;
+  gap: 10px;
+}
+
+.hero .dots .dot {
+  display: block;
+  height: 14px;
+  width: 14px;
+  cursor: pointer;
+  border-radius: 9999px;
+  --tw-bg-opacity: 1;
+  background-color: rgb(224 224 214 / var(--tw-bg-opacity));
+}
+
+.hero .dots .dot.active {
+  --tw-bg-opacity: 1;
+  background-color: rgb(198 41 3 / var(--tw-bg-opacity));
+}
+
+@media (max-width: 975px) {
+  .hero h1 {
+    margin-bottom: 7px;
+    font-size: 48px;
+    line-height: 48px;
+  }
+
+  .hero .arrow-btn {
+    margin-top: 0px;
+  }
+
+  .hero .hero-slide {
+    flex-direction: column;
+  }
+
+  .hero .hero-slide .left-section {
+    width: 100%;
+    padding-left: 30px;
+    padding-right: 30px;
+    padding-top: 46px;
+    padding-bottom: 26px;
+  }
+
+  .hero .hero-slide .right-section {
+    height: 100%;
+    width: 100%;
+  }
+
+  .hero h4,
+  .hero p {
+    font-size: 16px;
+    line-height: 22.4px;
+  }
+
+  .hero h4 {
+    margin-bottom: 10px;
+  }
+
+  .arrow-btn {
+    font-size: 20px;
+    line-height: 20px;
+  }
+
+  .arrow-btn::after {
+    content: url("data:image/svg+xml,%3Csvg width='24' height='24' viewBox='0 0 24 24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M7 17L17 7M17 7H7M17 7V17' stroke='%23E0E0D6' stroke-width='3' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E%0A");
+  }
+
+  .hero .hero-slide .content {
+    margin-bottom: 47px;
+  }
+
+  .hero .right-section img {
+    min-height: 383px;
+  }
+
+  .hero .slider-btns {
+    display: none;
+  }
+
+  .hero .dots .dot {
+    height: 10px;
+    width: 10px;
+  }
+
+  .hero .dots {
+    bottom: 30px;
+    left: 50%;
+    --tw-translate-x: -50%;
+    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  }
+}
