--- a/assets/tailwind.css
+++ b/assets/tailwind.css
@@ -68,3 +68,123 @@
     @apply pt-[2px] pb-[3px];
   }
 }
+
+/* Hero */
+
+.hero h4,
+.hero p {
+  @apply text-[20px] lg:text-[28px] leading-[28px] lg:leading-[39.2px] font-[500] text-[#E0E0D6];
+  letter-spacing: 0px;
+}
+
+.hero h1 {
+  @apply text-[4vw] xl:text-[5vw] leading-[5vw] font-[800] text-[#E0E0D6] uppercase mb-[14px];
+}
+
+.arrow-btn {
+  @apply text-[24px] lg:text-[32px] leading-[24px] lg:leading-[32px] font-[800] text-[#E0E0D6] uppercase;
+  letter-spacing: 0px;
+  font-family: var(--font-heading-family);
+}
+
+.arrow-btn::after {
+  @apply ml-[8px];
+  vertical-align: middle;
+  content: url("data:image/svg+xml,%3Csvg width='36' height='36' viewBox='0 0 36 36' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M10.5 25.5L25.5 10.5M25.5 10.5H10.5M25.5 10.5V25.5' stroke='%23E0E0D6' stroke-width='4' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E%0A");
+}
+
+.hero .hero-slide {
+  @apply flex h-full max-h-[910px];
+}
+.hero .hero-slide .left-section {
+  @apply w-[36%] pt-[8%] px-[5%] lg:px-[7.2%] pb-[2.6%] flex flex-col relative;
+}
+.hero .hero-slide .left-section .shape-wrapper {
+  @apply absolute max-w-[271px] right-0 top-0;
+}
+.hero .hero-slide .left-section .shape-wrapper img {
+  @apply w-full;
+}
+.hero .hero-slide .right-section {
+  @apply w-[64%];
+}
+.hero .hero-slide .content {
+  @apply mb-[20px];
+}
+.hero .right-section {
+  @apply relative;
+}
+.hero .right-section img {
+  @apply w-full h-full object-cover max-h-[auto];
+}
+
+.hero .arrow-btn {
+  @apply mt-auto;
+}
+
+.hero {
+  @apply relative;
+}
+.hero .slider-btns {
+  @apply absolute w-full justify-between flex top-[50%] translate-y-[-50%];
+}
+
+.hero .slider-btns button {
+  @apply bg-[#2D3830] w-[66px] h-[66px] flex items-center justify-center;
+}
+.hero .dots {
+  @apply flex absolute bottom-[60px] left-[47.5%] gap-[10px];
+}
+.hero .dots .dot {
+  @apply w-[14px] h-[14px] rounded-full bg-[#E0E0D6] block cursor-pointer;
+}
+.hero .dots .dot.active {
+  @apply bg-[#C62903];
+}
+
+@media (max-width: 975px) {
+  .hero h1 {
+    @apply text-[48px] leading-[48px] mb-[7px];
+  }
+
+  .hero .arrow-btn {
+    @apply mt-0;
+  }
+  .hero .hero-slide {
+    @apply flex-col;
+  }
+  .hero .hero-slide .left-section {
+    @apply w-full pt-[46px] px-[30px] pb-[26px];
+  }
+  .hero .hero-slide .right-section {
+    @apply w-full h-full;
+  }
+  .hero h4,
+  .hero p {
+    @apply text-[16px] leading-[22.4px];
+  }
+  .hero h4 {
+    @apply mb-[10px];
+  }
+  .arrow-btn {
+    @apply text-[20px] leading-[20px];
+  }
+  .arrow-btn::after {
+    content: url("data:image/svg+xml,%3Csvg width='24' height='24' viewBox='0 0 24 24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M7 17L17 7M17 7H7M17 7V17' stroke='%23E0E0D6' stroke-width='3' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E%0A");
+  }
+  .hero .hero-slide .content {
+    @apply mb-[47px];
+  }
+  .hero .right-section img {
+    @apply min-h-[383px];
+  }
+  .hero .slider-btns {
+    @apply hidden;
+  }
+  .hero .dots .dot {
+    @apply w-[10px] h-[10px];
+  }
+  .hero .dots {
+    @apply bottom-[30px] left-[50%] translate-x-[-50%];
+  }
+}
