--- a/assets/application.css
+++ b/assets/application.css
@@ -743,6 +743,11 @@ video {
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
+body {
+  --tw-bg-opacity: 1 !important;
+  background-color: rgb(224 224 214 / var(--tw-bg-opacity)) !important;
+}
+
 /* Header */
 
 .header-wrapper .header--middle-left {
@@ -960,10 +965,19 @@ video {
   font-family: var(--font-heading-family);
 }
 
+.arrow-btn.red-variant {
+  --tw-text-opacity: 1;
+  color: rgb(198 41 3 / var(--tw-text-opacity));
+}
+
 .arrow-btn::after {
   margin-left: 8px;
   vertical-align: middle;
   content: url("data:image/svg+xml,%3Csvg width='36' height='36' viewBox='0 0 36 36' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M10.5 25.5L25.5 10.5M25.5 10.5H10.5M25.5 10.5V25.5' stroke='%23E0E0D6' stroke-width='4' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E%0A");
+}
+
+.arrow-btn.red-variant::after {
+  content: url("data:image/svg+xml,%3Csvg%20width%3D%2236%22%20height%3D%2236%22%20viewBox%3D%220%200%2036%2036%22%20fill%3D%22none%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%0A%3Cpath%20d%3D%22M10.5%2025.5L25.5%2010.5M25.5%2010.5H10.5M25.5%2010.5V25.5%22%20stroke%3D%22%23C62903%22%20stroke-width%3D%224%22%20stroke-linecap%3D%22round%22%20stroke-linejoin%3D%22round%22%2F%3E%0A%3C%2Fsvg%3E%0A");
 }
 
 .hero .hero-slide {
@@ -1119,6 +1133,10 @@ video {
     content: url("data:image/svg+xml,%3Csvg width='24' height='24' viewBox='0 0 24 24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M7 17L17 7M17 7H7M17 7V17' stroke='%23E0E0D6' stroke-width='3' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E%0A");
   }
 
+  .arrow-btn.red-variant::after {
+    content: url("data:image/svg+xml,%3Csvg%20width%3D%2224%22%20height%3D%2224%22%20viewBox%3D%220%200%2024%2024%22%20fill%3D%22none%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%0A%3Cpath%20d%3D%22M7%2017L17%207M17%207H7M17%207V17%22%20stroke%3D%22%23C62903%22%20stroke-width%3D%223%22%20stroke-linecap%3D%22round%22%20stroke-linejoin%3D%22round%22%2F%3E%0A%3C%2Fsvg%3E%0A");
+  }
+
   .hero .hero-slide .content {
     margin-bottom: 47px;
   }
@@ -1142,4 +1160,271 @@ video {
     --tw-translate-x: -50%;
     transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
   }
+}
+
+/* Products Slider */
+
+.products-slider {
+  overflow: hidden;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-top: 77px;
+}
+
+@media (min-width: 1280px) {
+  .products-slider {
+    padding-top: 152px;
+  }
+}
+
+.products-slider h2 {
+  font-size: 48px;
+  font-weight: 800;
+  line-height: 43.2px;
+  --tw-text-opacity: 1;
+  color: rgb(45 56 48 / var(--tw-text-opacity));
+}
+
+@media (min-width: 640px) {
+  .products-slider h2 {
+    font-size: 54px;
+    line-height: 54px;
+  }
+}
+
+@media (min-width: 1024px) {
+  .products-slider h2 {
+    font-size: 70px;
+    line-height: 70px;
+  }
+}
+
+@media (min-width: 1280px) {
+  .products-slider h2 {
+    font-size: 96px;
+    line-height: 96px;
+  }
+}
+
+.products-slider .arrow-btn {
+  margin-bottom: 10px;
+}
+
+.products-slider .top-content {
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 25px;
+  max-width: 1645px;
+}
+
+@media (min-width: 640px) {
+  .products-slider .top-content {
+    margin-bottom: 40px;
+  }
+}
+
+.products-slider .heading {
+  margin-bottom: 18px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  -moz-column-gap: 10px;
+       column-gap: 10px;
+  row-gap: 24px;
+}
+
+@media (min-width: 640px) {
+  .products-slider .heading {
+    margin-bottom: 25px;
+    flex-direction: row;
+    align-items: flex-end;
+  }
+}
+
+.products-slider .arrow-btn {
+  white-space: nowrap;
+}
+
+.products-slider .tags {
+  display: flex;
+  overflow: hidden;
+  touch-action: none;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+          user-select: none;
+}
+
+.products-slider .tag-btn {
+  display: inline-block;
+  white-space: nowrap;
+  border-radius: 9999px;
+  border-width: 1px;
+  border-color: transparent;
+  padding-left: 26px;
+  padding-right: 26px;
+  padding-top: 9px;
+  padding-bottom: 9px;
+  font-size: 14px;
+  font-weight: 600;
+  line-height: 21px;
+  --tw-text-opacity: 1;
+  color: rgb(198 41 3 / var(--tw-text-opacity));
+}
+
+@media (min-width: 640px) {
+  .products-slider .tag-btn {
+    font-size: 16px;
+    line-height: 24px;
+  }
+}
+
+.products-slider .tag-btn.active {
+  --tw-border-opacity: 1;
+  border-color: rgb(198 41 3 / var(--tw-border-opacity));
+}
+
+.products-slider .image-wrapper {
+  position: relative;
+  margin-bottom: 3px;
+  padding-top: 80%;
+}
+
+@media (min-width: 640px) {
+  .products-slider .image-wrapper {
+    margin-bottom: 18px;
+    padding-top: 73%;
+  }
+}
+
+.products-slider .image-wrapper svg {
+  position: absolute;
+  top: 15px;
+  right: 19px;
+}
+
+@media (min-width: 640px) {
+  .products-slider .image-wrapper svg {
+    top: 19px;
+    right: 26px;
+  }
+}
+
+.products-slider .image-wrapper img {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  height: 100%;
+  width: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.products-slider h3 {
+  margin-bottom: 5px;
+  font-size: 24px;
+  font-weight: 800;
+  line-height: 24px;
+  --tw-text-opacity: 1;
+  color: rgb(45 56 48 / var(--tw-text-opacity));
+}
+
+@media (min-width: 1024px) {
+  .products-slider h3 {
+    font-size: 28px;
+    line-height: 28px;
+  }
+}
+
+.products-slider p {
+  margin-bottom: 10px;
+  font-size: 16px;
+  font-weight: 600;
+  line-height: 24px;
+  --tw-text-opacity: 1;
+  color: rgb(45 56 48 / var(--tw-text-opacity));
+}
+
+.products-slider .price {
+  margin-bottom: 17px;
+  display: inline-block;
+  font-size: 28px;
+  font-weight: 800;
+  line-height: 28px;
+  --tw-text-opacity: 1;
+  color: rgb(45 56 48 / var(--tw-text-opacity));
+}
+
+@media (min-width: 640px) {
+  .products-slider .price {
+    margin-bottom: 14px;
+  }
+}
+
+@media (min-width: 1024px) {
+  .products-slider .price {
+    font-size: 32px;
+    line-height: 32px;
+  }
+}
+
+.products-slider .price {
+  font-family: var(--font-heading-family);
+}
+
+.products-slider .products-slider-wrapper button span {
+  font-size: 16px;
+  font-weight: 800;
+  text-transform: uppercase;
+  line-height: 16px;
+  --tw-text-opacity: 1;
+  color: rgb(224 224 214 / var(--tw-text-opacity));
+  font-family: var(--font-heading-family);
+}
+
+.products-slider .products-slider-wrapper button::before,
+.products-slider .products-slider-wrapper button::after {
+  display: none;
+}
+
+.products-slider .products-slider-wrapper button {
+  min-height: 43px;
+  width: auto;
+  border-radius: 9999px;
+  --tw-bg-opacity: 1;
+  background-color: rgb(198 41 3 / var(--tw-bg-opacity));
+  padding-left: 25px;
+  padding-right: 25px;
+  opacity: 1;
+}
+
+.products-slider .products-slider-wrapper .content {
+  padding-left: 8px;
+  padding-right: 8px;
+}
+
+@media (min-width: 640px) {
+  .products-slider .products-slider-wrapper .content {
+    padding-left: 17px;
+    padding-right: 17px;
+  }
+}
+
+.products-slider .collection-slider {
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 1675px;
+}
+
+.products-slider .collection-slider .keen-slider {
+  margin-left: -10px;
+}
+
+@media (min-width: 640px) {
+  .products-slider .collection-slider .keen-slider {
+    margin-left: 0px;
+  }
+}
+
+.products-slider .collection-slider .keen-slider {
+  overflow: visible !important;
 }
