--- a/sections/products-slider.liquid
+++ b/sections/products-slider.liquid
@@ -2,6 +2,14 @@
 
 
 <div class="products-slider">
+  <div class="shape-wrapper">
+    <img
+    src="{{ 'products-slider-shape.png' | asset_url }}"
+    width="388"
+    height="568"
+    loading="lazy"
+  >
+</div>
     <div class="products-wrapper">
         <div class="top-content">
             <div class="heading">
