--- a/assets/application.css
+++ b/assets/application.css
@@ -1579,3 +1579,143 @@ body {
     max-width: 280px;
   }
 }
+
+/* Subscription plans */
+
+.subscription-plans {
+  display: flex;
+  flex-direction: column;
+}
+
+@media (min-width: 768px) {
+  .subscription-plans {
+    flex-direction: row;
+  }
+}
+
+.subscription-plans .subscription-card {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  overflow: hidden;
+  padding-top: 67px;
+  padding-bottom: 67px;
+  padding-left: 30px;
+  padding-right: 30px;
+}
+
+@media (min-width: 768px) {
+  .subscription-plans .subscription-card {
+    width: 50%;
+    padding-top: 80px;
+    padding-bottom: 80px;
+    padding-left: 40px;
+    padding-right: 40px;
+  }
+}
+
+@media (min-width: 1024px) {
+  .subscription-plans .subscription-card {
+    padding-top: 100px;
+    padding-bottom: 100px;
+    padding-left: 80px;
+    padding-right: 80px;
+  }
+}
+
+@media (min-width: 1280px) {
+  .subscription-plans .subscription-card {
+    padding-top: 114px;
+    padding-bottom: 114px;
+    padding-left: 100px;
+    padding-right: 100px;
+  }
+}
+
+@media (min-width: 1536px) {
+  .subscription-plans .subscription-card {
+    padding-left: 140px;
+    padding-right: 140px;
+  }
+}
+
+.subscription-plans .shape-wrapper {
+  position: absolute;
+  left: 0px;
+  top: 0px;
+  max-width: 139px;
+}
+
+@media (min-width: 640px) {
+  .subscription-plans .shape-wrapper {
+    max-width: 227px;
+  }
+}
+
+.subscription-plans .shape-wrapper img {
+  width: 100%;
+}
+
+.subscription-plans .image-wrapper {
+  position: absolute;
+  right: 0px;
+  top: 50%;
+  z-index: 0;
+  max-width: 282px;
+  --tw-translate-y: -50%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.subscription-plans h2 {
+  margin-bottom: 8px;
+  font-size: 40px;
+  font-weight: 800;
+  text-transform: uppercase;
+  line-height: 40px;
+  --tw-text-opacity: 1;
+  color: rgb(224 224 214 / var(--tw-text-opacity));
+}
+
+@media (min-width: 640px) {
+  .subscription-plans h2 {
+    margin-bottom: 23px;
+  }
+}
+
+@media (min-width: 1280px) {
+  .subscription-plans h2 {
+    font-size: 64px;
+    line-height: 64px;
+  }
+}
+
+.subscription-plans h2 {
+  letter-spacing: 0px;
+}
+
+.subscription-plans p {
+  margin-bottom: 37px;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 19.2px;
+  --tw-text-opacity: 1;
+  color: rgb(224 224 214 / var(--tw-text-opacity));
+}
+
+@media (min-width: 640px) {
+  .subscription-plans p {
+    margin-bottom: 55px;
+    font-size: 20px;
+    line-height: 24px;
+  }
+}
+
+.subscription-plans p {
+  letter-spacing: 0px;
+}
+
+.subscription-plans .content-wrapper {
+  position: relative;
+  z-index: 1;
+}
